...
}

fileprivate enum Constants {
    enum Text {
        static let screenTitle = "Choose Interests"
        static let screenSubtitle = "Choose your favorite interest to get new shows all in one place related to it"
        static let searchPlaceholder = "Search..."
        static let nextButtonTitle = "Next"
        static let language = "en-EN"
    }
    
    enum Layout {
        static let subtitleHInset: CGFloat = 32
        static let buttonHeight: CGFloat = 56
...
