...
//

import UIKit

fileprivate enum Constants {
    enum Text {
        static let title = "Explore the world of films!"
        static let description = "Sign in or create account"
        static let logIn = "LOG IN"
        static let signUp = "Create a new account"
    }
    
    enum Layout {
...
